# crates/services/server/src/catalog/manufacturers/mod.rs
@@ -1,0 +1,4 @@
+//! the module includes everything related to manufacturer web handlers
+
+pub mod handlers;
+pub mod routes;
